Prevent horizontal scrollbar in mobile

--- a/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
+++ b/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
@@ -95,6 +95,7 @@ header {
 
       @media (max-width: 991px) {
         background-color: $instance-nav-bg;
+        overflow-x: hidden;
         padding: 0;
 
         .nav-item.active {
